--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
+# Core dependencies
 numpy>=1.24
 pandas>=2.0
 scikit-learn>=1.3
-scikit-survival>=0.22
-lifelines>=0.27
-pycox>=0.3
-torch>=2.1
-torchtuples>=0.2
-pyyaml>=6.0
 joblib>=1.3
 matplotlib>=3.7
 seaborn>=0.13
 scipy>=1.11
-pyarrow>=14.0
+pyyaml>=6.0
+
+# Survival analysis (required for Cox model)
+lifelines>=0.27
+
+# Deep learning (required for DeepSurv model)
+torch>=2.1
+
+# Jupyter notebooks
 ipykernel>=6.25
 ipywidgets>=8.1
 notebook>=7.0
+
+# Optional: Advanced survival metrics (install separately if needed)
+# scikit-survival>=0.22
+# pycox>=0.3
+# torchtuples>=0.2
+
+# Optional: Additional utilities
+pyarrow>=14.0
 rich>=13.6
 tensorboard>=2.14
-
